--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -5,11 +5,10 @@
    "id": "152d1cf1-dd01-498c-b204-3e7a40c51662",
    "metadata": {},
    "source": [
-    "# Researcher Chat\n",
-    "Hello, everyone. The purpose of this notebook is to create a chatbot that reads papers online and answers technical questions from  Arxiv or SciHub.\n",
+    "# Researcher Chat with WatsonX\n",
+    "Hello, everyone. The purpose of this notebook is to create a chatbot that reads papers online and answers technical questions from  Arxiv.\n",
     "\n",
-    "You can download one of the best models of Generative AI that are  free and open source.\n",
-    "or you can connect with your WatsonX account or ChatGPT account.\n",
+    "You can download one of the best models of Generative AI that are  free and open source or use the more advanced ones within WatsonX. \n",
     "\n",
     "The idea of this program is to develop a simple tool that helps researchers find insights about issues that we have in science.\n",
     "\n"
@@ -28,26 +27,23 @@
    "execution_count": 1,
    "id": "3a6e8e37-1d64-49e1-b280-1c3cec48dad5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\rusla\\.conda\\envs\\textgen\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import urllib.request\n",
     "import fitz\n",
     "import re\n",
     "import numpy as np\n",
     "import tensorflow_hub as hub\n",
-    "import openai\n",
     "import gradio as gr\n",
     "import os\n",
-    "from sklearn.neighbors import NearestNeighbors"
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "# Compability with Hugging Face models\n",
+    "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM, AutoModelForCausalLM\n",
+    "import torch\n",
+    "import gradio as gr\n",
+    "import re\n",
+    "# Compability with ChatGPT\n",
+    "import openai"
    ]
   },
   {
@@ -189,19 +185,8 @@
     "        tokenizer = AutoTokenizer.from_pretrained(\"EleutherAI/gpt-neo-125M\")\n",
     "        input_ids = tokenizer(t5query, return_tensors=\"pt\").to(device) \n",
     "        outputs = model.generate(**input_ids, do_sample=True, max_length=tok_len) \n",
-    "    generation=tokenizer.batch_decode(outputs, skip_special_tokens=True)\n",
-    "    \n",
+    "    generation=tokenizer.batch_decode(outputs, skip_special_tokens=True)    \n",
     "    return '\\n'.join(generation)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "38dcfbf8-6b02-4ae7-b54a-1d28fad7db2f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "question='What is the capital of Italy'"
    ]
   },
   {
@@ -211,44 +196,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM, AutoModelForCausalLM\n",
-    "import torch\n",
-    "import gradio as gr\n",
-    "import re\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "b11eccef-ebd8-416c-9845-e5175e71251e",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bin C:\\Users\\rusla\\.conda\\envs\\textgen\\lib\\site-packages\\bitsandbytes\\libbitsandbytes_cuda117.dll\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'rome'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Testing the enviroment\n",
+    "question='What is the capital of Italy'\n",
     "query(question, modelo =\"flan-t5-small\" ,tokens=100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "55b9f055-cde6-4006-8099-28b4c3b75efc",
    "metadata": {},
    "outputs": [],
@@ -277,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "b7061b80-439d-4f93-96b3-2b769170fe39",
    "metadata": {},
    "outputs": [],
@@ -290,7 +266,6 @@
     "    \n",
     "    if url.strip() != '' and file != None:\n",
     "        return '[ERROR]: Both URL and PDF is provided. Please provide only one (eiter URL or PDF).'\n",
-    "\n",
     "    if url.strip() != '':\n",
     "        glob_url = url\n",
     "        download_pdf(glob_url, 'corpus.pdf')\n",
@@ -359,10 +334,8 @@
    ],
    "source": [
     "with gr.Blocks() as demo:\n",
-    "\n",
     "    gr.Markdown(f'<center><h1>{title}</h1></center>')\n",
     "    gr.Markdown(description)\n",
-    "\n",
     "    with gr.Row():\n",
     "        \n",
     "        with gr.Group():\n",
@@ -396,8 +369,7 @@
     "    results = \"\"\n",
     "    results += 'search results:\\n\\n'\n",
     "    for c in topn_chunks:\n",
-    "        results += c + '. \\n\\n'\n",
-    "        \n",
+    "        results += c + '. \\n\\n'       \n",
     "    instruction = \"Instructions: Compose a comprehensive reply to the query using the search results given. \"\\\n",
     "              \"Cite each reference using [ Page Number] notation (every result has this number at the beginning). \"\\\n",
     "              \"Citation should be done at the end of each sentence. If the search results mention multiple subjects \"\\\n",
@@ -866,9 +838,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (textgen)",
+   "display_name": "Python (ArxivChat)",
    "language": "python",
-   "name": "texgen"
+   "name": "arxivchat"
   },
   "language_info": {
    "codemirror_mode": {
@@ -880,7 +852,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
