--- a/test_1.ipynb
+++ b/test_1.ipynb
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "OPENAI_API_KEY = \"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\"\n"
+    "OPENAI_API_KEY = \"isld\"\n"
    ]
   },
   {
